--- a/coding_challenge2.html
+++ b/coding_challenge2.html
@@ -9,6 +9,7 @@
 <body>
     
 
-    <script src="..js/code2.js"></script>
+
+    <script src="../part1/js/cdchalenge2_Section9.js"></script>
 </body>
 </html>
