--- a/coding_challenge3.html
+++ b/coding_challenge3.html
@@ -9,6 +9,7 @@
 <body>
     
 
-    <script src="../js/code3.js"></script>
+
+    <script src="/part1/js/cdchallenge3_Section9.js"></script>
 </body>
 </html>
