--- a/coding_challenge4.html
+++ b/coding_challenge4.html
@@ -10,6 +10,6 @@
     
 
 
-    <script src="../js/code4.js"></script>
+    <script src="/part1/js/cdchallenge4_Section9.js"></script>
 </body>
 </html>
